--- a/Assignments/Theoretical/theoretical2.ipynb
+++ b/Assignments/Theoretical/theoretical2.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "Let's plot the decision boundary between the points for this set of weights. The decision boundary is found by setting $h(x) = 0$ which gives:\n",
     "\n",
-    "$$ x_2 = -\\frac{b_0 + \\theta_1x_1}{\\theta_2} $$"
+    "$$ x_2 = -\\frac{\\theta_0 + \\theta_1x_1}{\\theta_2} $$"
    ]
   },
   {
@@ -249,11 +249,11 @@
     "\n",
     "Finally, recovering the subindex notation for all the samples in our training set we can express the gradient of the cost function with respect to each parameter. For the weight case:\n",
     "\n",
-    "$$ \\frac{\\partial J(\\theta)}{\\partial \\theta_j} = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)})x_j^{(i)}. $$\n",
+    "$$ \\frac{\\partial J(\\theta)}{\\partial \\theta_j} = \\frac{1}{m} \\sum_{i=1}^m (z_\\theta(x^{(i)}) - y^{(i)})x_j^{(i)}. $$\n",
     "\n",
     "And for the bias case:\n",
     "\n",
-    "$$ \\frac{\\partial J(\\theta)}{\\partial \\theta_0} = \\frac{1}{m} \\sum_{i=1}^m (h_\\theta(x^{(i)}) - y^{(i)}). $$\n",
+    "$$ \\frac{\\partial J(\\theta)}{\\partial \\theta_0} = \\frac{1}{m} \\sum_{i=1}^m (z_\\theta(x^{(i)}) - y^{(i)}). $$\n",
     "\n",
     "With this two formulas now we can use these gradients to update the parameters in the gradient descent algorithm."
    ]
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -417,11 +417,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6 (main, Oct 24 2022, 11:04:34) [Clang 12.0.0 ]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "674b33fde229fb172653676d8ba5a214aa9d96adab6da7eba1052cbd6e4ad820"
+    "hash": "22b036690d78fd50cb20f717c1939a57ad68161061793550cddfe0c7beba940d"
    }
   }
  },
