--- a/Assignments/Practical/PracticalNotebook1.ipynb
+++ b/Assignments/Practical/PracticalNotebook1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -46,7 +46,22 @@
     "id": "0TQzszInX9nF",
     "outputId": "2dfe0b72-d3f7-4bb7-e22b-659a0a398232"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The answer is 42\n",
+      "The answer is 42\n",
+      "The answer is 42\n",
+      "The answer is 42\n",
+      "\n",
+      "Item 1 \n",
+      "Item 2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# The various ways for printing values in Python\n",
     "answer = 42\n",
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -78,7 +93,22 @@
     "id": "KqmwFjxcdYe8",
     "outputId": "30d0db81-35aa-4147-efdc-fe5420bd93c3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer = 42.62 with two decimals\n",
+      "Answer = 42.62 with two decimals\n",
+      "\n",
+      "5/2 = 2.5\n",
+      "5//2 = 2\n",
+      "\n",
+      "Rounding numbers 42\n",
+      "Rounding numbers 43\n"
+     ]
+    }
+   ],
    "source": [
     "# Math functions\n",
     "answer = 42.62\n",
@@ -106,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -114,7 +144,17 @@
     "id": "P_1mgkCCZbBt",
     "outputId": "0afd5b85-5a17-4783-8bad-d52f8fae11a1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(42, 'Answer', True)]\n",
+      "\n",
+      "Ranged based list: [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# Inserting into an empty list\n",
     "generic_list = []\n",
@@ -137,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -145,7 +185,15 @@
     "id": "Tsf3TkhSm9tU",
     "outputId": "f99fa358-d4ae-433e-95aa-8f8165eb33f7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generic_list[0] = 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Retreving elements from a list\n",
     "generic_list = [0, 1, 2, 3, 4, 5, 6]\n",
@@ -163,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,7 +219,15 @@
     "id": "LKST6TKjsFZv",
     "outputId": "0db4868c-673d-4c37-8043-a450f449dc3e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generic_list[-1] = 6\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"generic_list[-1] =\", generic_list[-1])"
    ]
@@ -187,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -195,7 +251,16 @@
     "id": "ay7exxUcsvsg",
     "outputId": "b820db20-fe4c-474c-e556-562b1debc15a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print elements in index 1-5: [1, 2, 3, 4]\n",
+      "Print all elements up to index 5: [0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Print elements in index 1-5:\", generic_list[1:5])\n",
     "print(\"Print all elements up to index 5:\", generic_list[:5])"
@@ -203,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -211,7 +276,15 @@
     "id": "xiPA8E6VsYOQ",
     "outputId": "f2f21a6f-8c0b-4204-c0bf-78fa8f87f479"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Every other element in a list: [0, 2, 4, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Every other element in a list:\", generic_list[::2])"
    ]
@@ -227,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -235,11 +308,20 @@
     "id": "LSMzhuEGtJHk",
     "outputId": "47e91ff1-c74b-4821-8d19-ec2698a3b308"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd number of the list:  [1, 3, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# ASSIGNMENT \n",
     "# print every odd number of the list\n",
-    "\n"
+    "odd_nr = [i for i in generic_list if i % 2 == 1]\n",
+    "print(\"Odd number of the list: \", odd_nr)"
    ]
   },
   {
@@ -253,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -261,7 +343,17 @@
     "id": "tRCqgru8tdiM",
     "outputId": "b3a03ef7-df33-4308-c1ce-d324c6d49f6f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], ['Bert', 'Elmo', 'Big Bird']]\n",
+      "['Bert', 'Elmo', 'Big Bird']\n",
+      "Elmo\n"
+     ]
+    }
+   ],
    "source": [
     "double_list = [[1, 2, 3], [\"Bert\", \"Elmo\", \"Big Bird\"]]\n",
     "print(double_list)\n",
@@ -281,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -289,7 +381,25 @@
     "id": "cDM0H4mBwIZB",
     "outputId": "7776a434-a1b9-4911-c105-09e060f14dea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min(generic_list) = 1\n",
+      "max(generic_list) = 932\n",
+      "sum(generic_list) = 1064\n",
+      "\n",
+      "['Bert', 'Elmo', 'Big Bird']\n",
+      "['Bert', 'Elmo', 'Big Bird', 'Erni']\n",
+      "['Bert', 'The Count', 'Elmo', 'Big Bird', 'Erni']\n",
+      "['Bert', 'The Count', 'Elmo', 'Erni']\n",
+      "['Bert', 'The Count', 'Elmo']\n",
+      "\n",
+      "Bert is in the list?  True\n"
+     ]
+    }
+   ],
    "source": [
     "generic_list = [1, 932, 77, 52, 2]\n",
     "print(\"min(generic_list) =\", min(generic_list))\n",
@@ -332,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -340,7 +450,19 @@
     "id": "2X97UmE-JCki",
     "outputId": "403c177c-02b9-4633-86c7-4c1a3187d0df"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 x 2 = 0\n",
+      "1 x 2 = 2\n",
+      "2 x 2 = 4\n",
+      "3 x 2 = 6\n",
+      "4 x 2 = 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Range based for loop\n",
     "length = 5\n",
@@ -350,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -358,7 +480,17 @@
     "id": "ULMrWwijUcB1",
     "outputId": "a2baa8a4-38fc-4ad6-c9fc-5457d88e24d9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ada Lovelace a pioneer in computer science\n",
+      "Alan Turing a pioneer in computer science\n",
+      "Grace Hopper a pioneer in computer science\n"
+     ]
+    }
+   ],
    "source": [
     "# Non pythonic way of printing a list\n",
     "name_list = [\"Ada Lovelace\", \"Alan Turing\", \"Grace Hopper\"]\n",
@@ -368,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -376,7 +508,17 @@
     "id": "dueiNOWGH931",
     "outputId": "bf3c4736-8dca-4fef-c998-fdd2b1226e32"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ada Lovelace a pioneer in computer science\n",
+      "Alan Turing a pioneer in computer science\n",
+      "Grace Hopper a pioneer in computer science\n"
+     ]
+    }
+   ],
    "source": [
     "# Printing a list\n",
     "# Assignment: print content of the list with out the `range` function\n",
@@ -387,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -395,7 +537,26 @@
     "id": "TS8-k2LG27je",
     "outputId": "a3a45342-27f5-45ff-ed51-06e7ff26767f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Ada Lovelace\n",
+      "2 Alan Turing\n",
+      "3 Grace Hopper\n",
+      "\n",
+      "1 Ada Lovelace\n",
+      "2 Alan Turing\n",
+      "3 Grace Hopper\n",
+      "\n",
+      "1 Ada Lovelace\n",
+      "2 Alan Turing\n",
+      "3 Grace Hopper\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# There are multiple ways to do a ranged based for loop in Python\n",
     "name_list = [\"Ada Lovelace\", \"Alan Turing\", \"Grace Hopper\"]\n",
@@ -426,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -434,14 +595,27 @@
     "id": "opU78itC3cCG",
     "outputId": "83600bf6-64cf-4a1e-c04d-38371e8d1107"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 52, 77, 932]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ASSIGNMENT:\n",
     "# sort the \"generic_list\" in ascending order and print it.\n",
     "\n",
     "generic_list = [1, 932, 77, 52, 2]\n",
     "# YOUR CODE HERE\n",
-    "# Hint: There is a sorting function in python that will do this. Google it."
+    "# Hint: There is a sorting function in python that will do this. Google it.\n",
+    "generic_list.sort()\n",
+    "generic_list"
    ]
   },
   {
@@ -465,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -473,7 +647,16 @@
     "id": "MPNTEYLdXjlS",
     "outputId": "c33f2232-156a-45d5-b5ec-97997af6e801"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "union of elements between the two lists {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13}\n",
+      "intersection of elements between the two lists {8, 1, 5, 9}\n"
+     ]
+    }
+   ],
    "source": [
     "lst1 = [0, 1, 3, 5, 6, 7, 5, 8, 9, 10, 12]\n",
     "lst2 = [1, 2, 2, 1, 2, 4, 5, 8, 2, 13, 9, 11]\n",
@@ -486,7 +669,16 @@
     "#\n",
     "# HINT: look into `sets` in Python\n",
     "\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "lst1_set = set(lst1)\n",
+    "lst2_set = set(lst2)\n",
+    "\n",
+    "union = lst1_set.union(lst2_set)\n",
+    "print(\"union of elements between the two lists\", union)\n",
+    "\n",
+    "intersection = lst1_set.intersection(lst2_set)\n",
+    "print(\"intersection of elements between the two lists\", intersection)\n"
    ]
   },
   {
@@ -510,11 +702,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "id": "t7Ch1nH-Ua0m"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90 -1 6 45\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# ASSIGNMENT:\n",
@@ -525,8 +725,7 @@
     "#   4. The last elements from a list\n",
     "\n",
     "def our_custom_function(lst):\n",
-    "    # YOUR CODE HERE\n",
-    "    pass\n",
+    "    return max(lst), min(lst), lst[0], lst[-1]\n",
     "\n",
     "\n",
     "lst = [6, 90, 42, -1, 45]\n",
@@ -536,7 +735,8 @@
     "assert highest == 90\n",
     "assert lowest == -1\n",
     "assert first == 6\n",
-    "assert last == 45\n"
+    "assert last == 45\n",
+    "\n"
    ]
   },
   {
@@ -550,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -558,7 +758,26 @@
     "id": "iRpPSnAHBw7A",
     "outputId": "ce2f3bec-43b3-41ba-8b49-1017f96d3894"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Squared list:  \t\t\t  [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pamu/Documents/Dokument – pamu MacBook Pro /Skola/Machine Learning/MLAssignments/Assignments/Practical/PracticalNotebook1.ipynb Cell 36\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pamu/Documents/Dokument%20%E2%80%93%20pamu%20MacBook%20Pro%20/Skola/Machine%20Learning/MLAssignments/Assignments/Practical/PracticalNotebook1.ipynb#X50sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Make sure here you use list comprehension. Find out more about list comprehension from: https://www.w3schools.com/python/python_lists_comprehension.asp\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pamu/Documents/Dokument%20%E2%80%93%20pamu%20MacBook%20Pro%20/Skola/Machine%20Learning/MLAssignments/Assignments/Practical/PracticalNotebook1.ipynb#X50sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# TODO YOUR CODE HERE.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pamu/Documents/Dokument%20%E2%80%93%20pamu%20MacBook%20Pro%20/Skola/Machine%20Learning/MLAssignments/Assignments/Practical/PracticalNotebook1.ipynb#X50sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m lst \u001b[39m=\u001b[39m []\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pamu/Documents/Dokument%20%E2%80%93%20pamu%20MacBook%20Pro%20/Skola/Machine%20Learning/MLAssignments/Assignments/Practical/PracticalNotebook1.ipynb#X50sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39massert\u001b[39;00m lst \u001b[39m==\u001b[39m [\u001b[39m2\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m34\u001b[39m, \u001b[39m144\u001b[39m, \u001b[39m610\u001b[39m, \u001b[39m2584\u001b[39m]\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# List comprehention\n",
     "squared = [x**2 for x in range(10)]\n",
@@ -1221,7 +1440,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1235,7 +1454,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "22b036690d78fd50cb20f717c1939a57ad68161061793550cddfe0c7beba940d"
+   }
   }
  },
  "nbformat": 4,
