--- a/Assignments/Theoretical/theoretical2.ipynb
+++ b/Assignments/Theoretical/theoretical2.ipynb
@@ -499,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -513,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
