--- a/Assignments/Practical/PracticalNotebook1.ipynb
+++ b/Assignments/Practical/PracticalNotebook1.ipynb
@@ -1705,7 +1705,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
