--- a/Assignments/Practical/PracticalNotebook4.ipynb
+++ b/Assignments/Practical/PracticalNotebook4.ipynb
@@ -981,7 +981,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -995,7 +995,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "22b036690d78fd50cb20f717c1939a57ad68161061793550cddfe0c7beba940d"
+   }
   }
  },
  "nbformat": 4,
